--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/index.jsx", "app/_layout.jsx"  ]
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
+  ]
 }
